cabal-version:       2.4

name:                higgledy
version:             0.3.1.0
synopsis:            Partial types as a type constructor.
description:         Use the generic representation of an ADT to get a higher-kinded data-style interface automatically.
homepage:            https://github.com/i-am-tom/higgledy
-- bug-reports:
license:             MIT
license-file:        LICENSE
author:              Tom Harding
maintainer:          tom.harding@habito.com
-- copyright:
category:            Data
extra-source-files:  CHANGELOG.md
                  ,  README.md

library
  exposed-modules:     Data.Generic.HKD
                       Data.Generic.HKD.Build
                       Data.Generic.HKD.Construction
                       Data.Generic.HKD.Labels
                       Data.Generic.HKD.Named
                       Data.Generic.HKD.Types
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>= 4.12
                     , barbies ^>= 1.1.0
                     , generic-lens ^>= 1.1.0
                     , QuickCheck >= 2.12.6 && < 2.14
                     , named ^>= 0.3.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  build-depends:       base
                     , barbies ^>= 1.1.0
                     , doctest ^>= 0.16.0
                     , higgledy
                     , hspec >= 2.6.1 && < 2.8
                     , lens ^>= 4.17
                     , QuickCheck >= 2.12.6 && < 2.14
  main-is:             Main.hs
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  default-language:    Haskell2010

test-suite readme
  build-depends:       base
                     , barbies ^>= 1.1.0
                     , lens ^>= 4.17
                     , higgledy
                     , named ^>= 0.3.0.0
  main-is:             README.lhs
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  ghc-options:         -pgmL markdown-unlit -Wall
  build-tool-depends:  markdown-unlit:markdown-unlit
